--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,19 @@
     android:layout_height="match_parent"
     tools:context="com.example.tracking_corona.MainActivity">
 
-    <androidx.viewpager.widget.ViewPager
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/navBottom"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/viewPager">
+<!--    <androidx.viewpager.widget.ViewPager-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/navBottom"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        android:id="@+id/viewPager">-->
         <FrameLayout
             android:id="@+id/fragmentContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </androidx.viewpager.widget.ViewPager>
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/navBottom"/>
+<!--    </androidx.viewpager.widget.ViewPager>-->
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navBottom"
@@ -24,7 +26,7 @@
         android:layout_height="wrap_content"
         android:background="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/viewPager"
+        app:layout_constraintTop_toBottomOf="@id/fragmentContainer"
         app:menu="@menu/menu_nav_bottom"
         tools:layout_editor_absoluteX="0dp" />
 
