--- a/app/src/main/res/layout/list_custom_item.xml
+++ b/app/src/main/res/layout/list_custom_item.xml
@@ -9,9 +9,8 @@
     >
 
     <LinearLayout
-        android:layout_width="366dp"
-        android:layout_height="wrap_content"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageFlag"
@@ -27,7 +26,7 @@
 
     <TextView
         android:id="@+id/tvCountryName"
-        android:layout_width="366dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
