--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -61,7 +61,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnCall"
             android:layout_width="142dp"
             android:layout_height="40dp"
             android:layout_marginStart="16dp"
@@ -71,32 +71,32 @@
             android:drawableLeft="@drawable/ic_phone"
             android:drawablePadding="8dp"
             android:paddingLeft="16dp"
-            android:text="Call Now"
+            android:text="Gọi ngay"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@+id/button2"
+            app:layout_constraintEnd_toStartOf="@+id/btnMes"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnMes"
             android:layout_width="142dp"
             android:layout_height="40dp"
             android:background="@drawable/send_sms_button"
             android:drawableLeft="@drawable/ic_message_circle"
             android:drawablePadding="8dp"
             android:paddingLeft="16dp"
-            android:text="Send SMS"
+            android:text="Gửi SMS"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@+id/button"
+            app:layout_constraintBottom_toBottomOf="@+id/btnCall"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/button"
-            app:layout_constraintTop_toTopOf="@+id/button" />
+            app:layout_constraintStart_toEndOf="@+id/btnCall"
+            app:layout_constraintTop_toTopOf="@+id/btnCall" />
 
         <TextView
             android:id="@+id/textView8"
@@ -110,7 +110,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/btnCall" />
 
         <Button
             android:id="@+id/button_danh_cho_hs"
