--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -9,8 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/ic_homebg">
+        android:layout_height="match_parent">
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
@@ -19,8 +18,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="32dp"
             android:text="Covid-19"
-            android:textColor="#FFFFFF"
-            android:textSize="24sp"
+            android:textColor="#1E1010"
+            android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +42,7 @@
             android:layout_marginTop="16dp"
             android:lineSpacingExtra="4sp"
             android:text="Nếu bạn cảm thấy bị bệnh với bất kỳ triệu chứng covid-19\nvui lòng gọi cho bạn hoặc SMS để được giúp đỡ ngay lập tức."
-            android:textColor="#FFFFFF"
+            android:textColor="#1E1010"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -55,7 +54,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="44dp"
             android:text="Bạn có cảm thấy như bị bệnh không?"
-            android:textColor="#FFFFFF"
+            android:textColor="#1E1010"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -73,7 +72,7 @@
             android:paddingLeft="16dp"
             android:text="Call Now"
             android:textAllCaps="false"
-            android:textColor="#FFFFFF"
+            android:textColor="#1E1010"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/button2"
             app:layout_constraintHorizontal_bias="0.5"
@@ -97,7 +96,6 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button"
             app:layout_constraintTop_toTopOf="@+id/button" />
-
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
@@ -113,7 +111,7 @@
             app:layout_constraintTop_toBottomOf="@+id/button" />
 
         <Button
-            android:id="@+id/button_danh_cho_hs"
+            android:id="@+id/btn_guide_student"
             android:layout_width="340dp"
             android:layout_height="110dp"
             android:layout_alignParentStart="true"
@@ -122,7 +120,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginTop="12dp"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/school"
+            android:drawableLeft="@drawable/icon_student"
             android:background="#fde5d3"
             android:paddingLeft="10dp"
             android:paddingRight="20dp"
@@ -134,5 +132,152 @@
             app:layout_constraintHorizontal_bias="0.506"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+        <Button
+            android:id="@+id/btn_guide_school"
+            android:layout_width="340dp"
+            android:layout_height="110dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="12dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/school"
+            android:background="#FDF2CF"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:text="Dành cho trường học"
+            android:textAllCaps="false"
+            android:textColor="@color/cardblack"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="@id/btn_guide_student"
+            app:layout_constraintTop_toBottomOf="@id/btn_guide_student" />
+
+        <Button
+            android:id="@+id/btn_guide_travel"
+            android:layout_width="340dp"
+            android:layout_height="110dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="12dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/icon_travel"
+            android:background="#D0E3F2"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:text="Khi tham gia giao thông"
+            android:textAllCaps="false"
+            android:textColor="@color/cardblack"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="@id/btn_guide_school"
+            app:layout_constraintTop_toBottomOf="@id/btn_guide_school" />
+
+        <Button
+            android:id="@+id/btn_guide_apartment"
+            android:layout_width="340dp"
+            android:layout_height="110dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="12dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/icon_apartment"
+            android:background="#DDDCF6"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:text="Dành cho chung cư"
+            android:textAllCaps="false"
+            android:textColor="@color/cardblack"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="@id/btn_guide_travel"
+            app:layout_constraintTop_toBottomOf="@id/btn_guide_travel" />
+
+        <Button
+            android:id="@+id/btn_guide_suspect"
+            android:layout_width="340dp"
+            android:layout_height="110dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="12dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/icon_suspect"
+            android:background="#E0F1FD"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:text="Người có triệu chứng"
+            android:textAllCaps="false"
+            android:textColor="@color/cardblack"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="@id/btn_guide_apartment"
+            app:layout_constraintTop_toBottomOf="@id/btn_guide_apartment" />
+
+        <Button
+            android:id="@+id/btn_guide_workspace"
+            android:layout_width="340dp"
+            android:layout_height="110dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="12dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/icon_workspace"
+            android:background="#E0F1FD"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:text="Dành cho nơi làm việc"
+            android:textAllCaps="false"
+            android:textColor="@color/cardblack"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="@id/btn_guide_suspect"
+            app:layout_constraintTop_toBottomOf="@id/btn_guide_suspect" />
+
+        <Button
+            android:id="@+id/btn_guide_family"
+            android:layout_width="340dp"
+            android:layout_height="110dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="12dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/icon_family"
+            android:background="#F2D2E4"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:text="Dành cho gia đình"
+            android:textAllCaps="false"
+            android:textColor="@color/cardblack"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="@id/btn_guide_workspace"
+            app:layout_constraintTop_toBottomOf="@id/btn_guide_workspace" />
+
+        <Button
+            android:id="@+id/btn_guide_service"
+            android:layout_width="340dp"
+            android:layout_height="110dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="12dp"
+            android:layout_weight="1"
+            android:drawableLeft="@drawable/icon_service"
+            android:background="#D4F4FC"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:text="Dành cho trường học"
+            android:textAllCaps="false"
+            android:textColor="@color/cardblack"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="@id/btn_guide_family"
+            app:layout_constraintTop_toBottomOf="@id/btn_guide_family" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
